"INFORMATION" and "View more" buttons misaligned fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -952,7 +952,7 @@ input[type="file"]::file-selector-button {
   width: -moz-fit-content;
   width: fit-content;
   padding: 1.375rem 3.625rem 1.375rem 3.09375rem;
-  margin-top: 1.4rem;
+  margin-top: 0.4rem;
   color: #000;
   border: 1px solid #000;
   border-radius: 3.75rem;
